--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vci-logcat",
-  "version": "1.3.0",
+  "version": "0.5.0",
   "description": "VCI logcat",
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/vci-logcat -c ws://localhost:8080",
-    "test": "echo \"There is no test to run.\"",
+    "test": "eslint ./bin/*",
     "lint": "eslint ./bin/*"
   },
   "repository": {
@@ -18,7 +18,9 @@
   "author": "oO",
   "license": "MIT",
   "dependencies": {
+    "bl": "~2.2.0",
     "commander": "~2.19.0",
+    "msgpack5": "~4.2.1",
     "ws": "~6.1.4"
   },
   "bin": {
