--- a/package.json
+++ b/package.json
@@ -18,20 +18,19 @@
   "author": "oO",
   "license": "MIT",
   "dependencies": {
-    "bl": "~2.2.0",
+    "bl": "~2.2.1",
     "commander": "~5.1.0",
-    "msgpack5": "~4.2.1",
-    "ws": "~7.3.0"
+    "msgpack5": "~4.5.1",
+    "ws": "~7.3.1"
   },
   "bin": {
     "vci-logcat": "./bin/vci-logcat"
   },
   "devDependencies": {
-    "eslint": "^7.3.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint": "^7.26.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
