--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "private": true,
   "name": "vci-logcat",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "VCI logcat",
   "main": "index.js",
   "scripts": {
