--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,9 @@
-.eslintrc text eol=lf
+.eslintignore text eol=lf
 .gitattributes text eol=lf
 .gitignore text eol=lf
 .npmignore text eol=lf
+.sassrc text eol=lf
 
-DEPS text eol=lf
 LICENSE text eol=lf
 vci-logcat text eol=lf
 
@@ -13,7 +13,14 @@ vci-logcat text eol=lf
 *.js text eol=lf
 *.json text eol=lf
 *.lua text eol=lf
+*.jsonc text eol=lf
 *.md text eol=lf
 *.p5js text eol=lf
+*.sass text eol=lf
+*.scss text eol=lf
 *.ts text eol=lf
+*.tsx text eol=lf
 *.txt text eol=lf
+*.xml text eol=lf
+*.yaml text eol=lf
+*.yml text eol=lf
